--- a/medical-insurance-price-prediction.ipynb
+++ b/medical-insurance-price-prediction.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3956e1a0",
+   "id": "4f1c3809",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.002665,
-     "end_time": "2024-01-26T14:15:19.164643",
+     "duration": 0.002265,
+     "end_time": "2024-01-26T14:19:35.464220",
      "exception": false,
-     "start_time": "2024-01-26T14:15:19.161978",
+     "start_time": "2024-01-26T14:19:35.461955",
      "status": "completed"
     },
     "tags": []
@@ -28,19 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7496da74",
+   "id": "4f21dcfe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:15:19.172734Z",
-     "iopub.status.busy": "2024-01-26T14:15:19.171664Z",
-     "iopub.status.idle": "2024-01-26T14:15:22.425997Z",
-     "shell.execute_reply": "2024-01-26T14:15:22.424513Z"
+     "iopub.execute_input": "2024-01-26T14:19:35.469794Z",
+     "iopub.status.busy": "2024-01-26T14:19:35.469397Z",
+     "iopub.status.idle": "2024-01-26T14:19:37.664812Z",
+     "shell.execute_reply": "2024-01-26T14:19:37.663555Z"
     },
     "papermill": {
-     "duration": 3.261373,
-     "end_time": "2024-01-26T14:15:22.429027",
+     "duration": 2.201029,
+     "end_time": "2024-01-26T14:19:37.667119",
      "exception": false,
-     "start_time": "2024-01-26T14:15:19.167654",
+     "start_time": "2024-01-26T14:19:35.466090",
      "status": "completed"
     },
     "tags": []
@@ -57,6 +57,212 @@
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.model_selection import cross_val_score, train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "74622f4c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-26T14:19:37.672319Z",
+     "iopub.status.busy": "2024-01-26T14:19:37.671886Z",
+     "iopub.status.idle": "2024-01-26T14:19:37.727062Z",
+     "shell.execute_reply": "2024-01-26T14:19:37.725646Z"
+    },
+    "papermill": {
+     "duration": 0.06032,
+     "end_time": "2024-01-26T14:19:37.729301",
+     "exception": false,
+     "start_time": "2024-01-26T14:19:37.668981",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>16884.92400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1725.55230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>4449.46200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>21984.47061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>3866.85520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>31</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.740</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>3756.62160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>46</td>\n",
+       "      <td>female</td>\n",
+       "      <td>33.440</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>8240.58960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>37</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.740</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>7281.50560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>37</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.830</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>6406.41070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>60</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.840</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>28923.13692</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age     sex     bmi  children smoker     region      charges\n",
+       "0   19  female  27.900         0    yes  southwest  16884.92400\n",
+       "1   18    male  33.770         1     no  southeast   1725.55230\n",
+       "2   28    male  33.000         3     no  southeast   4449.46200\n",
+       "3   33    male  22.705         0     no  northwest  21984.47061\n",
+       "4   32    male  28.880         0     no  northwest   3866.85520\n",
+       "5   31  female  25.740         0     no  southeast   3756.62160\n",
+       "6   46  female  33.440         1     no  southeast   8240.58960\n",
+       "7   37  female  27.740         3     no  northwest   7281.50560\n",
+       "8   37    male  29.830         2     no  northeast   6406.41070\n",
+       "9   60  female  25.840         0     no  northwest  28923.13692"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/kaggle/input/medical-insurance-price-prediction/Medical_insurance.csv')\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b01acdb7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-26T14:19:37.735372Z",
+     "iopub.status.busy": "2024-01-26T14:19:37.735016Z",
+     "iopub.status.idle": "2024-01-26T14:19:37.743046Z",
+     "shell.execute_reply": "2024-01-26T14:19:37.741613Z"
+    },
+    "papermill": {
+     "duration": 0.013807,
+     "end_time": "2024-01-26T14:19:37.745601",
+     "exception": false,
+     "start_time": "2024-01-26T14:19:37.731794",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# replace the '?' entries with NaN values\n",
+    "df.replace('?',np.nan, inplace=True)"
    ]
   }
  ],
@@ -95,14 +301,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.169233,
-   "end_time": "2024-01-26T14:15:23.154510",
+   "duration": 5.586518,
+   "end_time": "2024-01-26T14:19:38.369087",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-26T14:15:13.985277",
+   "start_time": "2024-01-26T14:19:32.782569",
    "version": "2.4.0"
   }
  },
