--- a/medical-insurance-price-prediction.ipynb
+++ b/medical-insurance-price-prediction.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f1c3809",
+   "id": "086ef644",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.002265,
-     "end_time": "2024-01-26T14:19:35.464220",
+     "duration": 0.004099,
+     "end_time": "2024-01-26T14:39:47.474603",
      "exception": false,
-     "start_time": "2024-01-26T14:19:35.461955",
+     "start_time": "2024-01-26T14:39:47.470504",
      "status": "completed"
     },
     "tags": []
@@ -28,19 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f21dcfe",
+   "id": "54b0b4fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:19:35.469794Z",
-     "iopub.status.busy": "2024-01-26T14:19:35.469397Z",
-     "iopub.status.idle": "2024-01-26T14:19:37.664812Z",
-     "shell.execute_reply": "2024-01-26T14:19:37.663555Z"
+     "iopub.execute_input": "2024-01-26T14:39:47.484539Z",
+     "iopub.status.busy": "2024-01-26T14:39:47.484066Z",
+     "iopub.status.idle": "2024-01-26T14:39:50.023368Z",
+     "shell.execute_reply": "2024-01-26T14:39:50.022180Z"
     },
     "papermill": {
-     "duration": 2.201029,
-     "end_time": "2024-01-26T14:19:37.667119",
+     "duration": 2.54861,
+     "end_time": "2024-01-26T14:39:50.026896",
      "exception": false,
-     "start_time": "2024-01-26T14:19:35.466090",
+     "start_time": "2024-01-26T14:39:47.478286",
      "status": "completed"
     },
     "tags": []
@@ -62,19 +62,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "74622f4c",
+   "id": "56534014",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:19:37.672319Z",
-     "iopub.status.busy": "2024-01-26T14:19:37.671886Z",
-     "iopub.status.idle": "2024-01-26T14:19:37.727062Z",
-     "shell.execute_reply": "2024-01-26T14:19:37.725646Z"
+     "iopub.execute_input": "2024-01-26T14:39:50.037337Z",
+     "iopub.status.busy": "2024-01-26T14:39:50.036664Z",
+     "iopub.status.idle": "2024-01-26T14:39:50.110274Z",
+     "shell.execute_reply": "2024-01-26T14:39:50.108037Z"
     },
     "papermill": {
-     "duration": 0.06032,
-     "end_time": "2024-01-26T14:19:37.729301",
+     "duration": 0.082061,
+     "end_time": "2024-01-26T14:39:50.113106",
      "exception": false,
-     "start_time": "2024-01-26T14:19:37.668981",
+     "start_time": "2024-01-26T14:39:50.031045",
      "status": "completed"
     },
     "tags": []
@@ -242,19 +242,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b01acdb7",
+   "id": "1a277b3f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:19:37.735372Z",
-     "iopub.status.busy": "2024-01-26T14:19:37.735016Z",
-     "iopub.status.idle": "2024-01-26T14:19:37.743046Z",
-     "shell.execute_reply": "2024-01-26T14:19:37.741613Z"
+     "iopub.execute_input": "2024-01-26T14:39:50.122913Z",
+     "iopub.status.busy": "2024-01-26T14:39:50.122451Z",
+     "iopub.status.idle": "2024-01-26T14:39:50.131765Z",
+     "shell.execute_reply": "2024-01-26T14:39:50.130906Z"
     },
     "papermill": {
-     "duration": 0.013807,
-     "end_time": "2024-01-26T14:19:37.745601",
+     "duration": 0.017009,
+     "end_time": "2024-01-26T14:39:50.134137",
      "exception": false,
-     "start_time": "2024-01-26T14:19:37.731794",
+     "start_time": "2024-01-26T14:39:50.117128",
      "status": "completed"
     },
     "tags": []
@@ -263,6 +263,157 @@
    "source": [
     "# replace the '?' entries with NaN values\n",
     "df.replace('?',np.nan, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e9164f3",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003926,
+     "end_time": "2024-01-26T14:39:50.142005",
+     "exception": false,
+     "start_time": "2024-01-26T14:39:50.138079",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# **Data Wrangling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "02040dcb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-26T14:39:50.152186Z",
+     "iopub.status.busy": "2024-01-26T14:39:50.151511Z",
+     "iopub.status.idle": "2024-01-26T14:39:50.179751Z",
+     "shell.execute_reply": "2024-01-26T14:39:50.178619Z"
+    },
+    "papermill": {
+     "duration": 0.036491,
+     "end_time": "2024-01-26T14:39:50.182480",
+     "exception": false,
+     "start_time": "2024-01-26T14:39:50.145989",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2772 entries, 0 to 2771\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   age       2772 non-null   int64  \n",
+      " 1   sex       2772 non-null   object \n",
+      " 2   bmi       2772 non-null   float64\n",
+      " 3   children  2772 non-null   int64  \n",
+      " 4   smoker    2772 non-null   object \n",
+      " 5   region    2772 non-null   object \n",
+      " 6   charges   2772 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(3)\n",
+      "memory usage: 151.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using info() to identify the columns that have some Null\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37f393a1",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003698,
+     "end_time": "2024-01-26T14:39:50.190279",
+     "exception": false,
+     "start_time": "2024-01-26T14:39:50.186581",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "handling missing data:\n",
+    "* for continuous attributes (eg: age) replace missing values with the mean\n",
+    "* for categorical attributes(eg: smoker) replace missing values with the most frequent value\n",
+    "* update the data type of the respective columns\n",
+    "* verify the update using info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f63a375f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-26T14:39:50.200572Z",
+     "iopub.status.busy": "2024-01-26T14:39:50.199392Z",
+     "iopub.status.idle": "2024-01-26T14:39:50.224102Z",
+     "shell.execute_reply": "2024-01-26T14:39:50.222321Z"
+    },
+    "papermill": {
+     "duration": 0.033073,
+     "end_time": "2024-01-26T14:39:50.227246",
+     "exception": false,
+     "start_time": "2024-01-26T14:39:50.194173",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error converting 'smoker' column to int: invalid literal for int() with base 10: 'yes'\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2772 entries, 0 to 2771\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   age       2772 non-null   int64  \n",
+      " 1   sex       2772 non-null   object \n",
+      " 2   bmi       2772 non-null   float64\n",
+      " 3   children  2772 non-null   int64  \n",
+      " 4   smoker    2772 non-null   object \n",
+      " 5   region    2772 non-null   object \n",
+      " 6   charges   2772 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(3)\n",
+      "memory usage: 151.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# smoker is a categorical attribute, replace with most frequent entry\n",
+    "is_smoker = df['smoker'].value_counts().idxmax()\n",
+    "df[\"smoker\"].replace(np.nan, is_smoker, inplace=True)\n",
+    "\n",
+    "# age is a continuous variable, replace with mean age\n",
+    "mean_age = df['age'].astype('float').mean(axis=0)\n",
+    "df[\"age\"].replace(np.nan, mean_age, inplace=True)\n",
+    "\n",
+    "# Update data types\n",
+    "df[\"age\"] = df[\"age\"].astype(int)\n",
+    "\n",
+    "try:\n",
+    "   df[\"smoker\"] = df[\"smoker\"].astype(int)\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error converting 'smoker' column to int: {e}\")\n",
+    "\n",
+    "#df[[\"age\",\"smoker\"]] = df[[\"age\",\"smoker\"]].astype(\"int\")\n",
+    "\n",
+    "print(df.info())"
    ]
   }
  ],
@@ -301,14 +452,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 5.586518,
-   "end_time": "2024-01-26T14:19:38.369087",
+   "duration": 7.134568,
+   "end_time": "2024-01-26T14:39:50.957517",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-26T14:19:32.782569",
+   "start_time": "2024-01-26T14:39:43.822949",
    "version": "2.4.0"
   }
  },
