Kaggle Notebook | Medical Insurance Price prediction | Version 4

--- a/medical-insurance-price-prediction.ipynb
+++ b/medical-insurance-price-prediction.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "086ef644",
+   "id": "1864bc1c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "papermill": {
-     "duration": 0.004099,
-     "end_time": "2024-01-26T14:39:47.474603",
+     "duration": 0.004658,
+     "end_time": "2024-01-26T14:41:32.548621",
      "exception": false,
-     "start_time": "2024-01-26T14:39:47.470504",
+     "start_time": "2024-01-26T14:41:32.543963",
      "status": "completed"
     },
     "tags": []
@@ -28,19 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54b0b4fe",
+   "id": "63c337bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:39:47.484539Z",
-     "iopub.status.busy": "2024-01-26T14:39:47.484066Z",
-     "iopub.status.idle": "2024-01-26T14:39:50.023368Z",
-     "shell.execute_reply": "2024-01-26T14:39:50.022180Z"
+     "iopub.execute_input": "2024-01-26T14:41:32.558655Z",
+     "iopub.status.busy": "2024-01-26T14:41:32.557921Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.734269Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.733071Z"
     },
     "papermill": {
-     "duration": 2.54861,
-     "end_time": "2024-01-26T14:39:50.026896",
+     "duration": 2.184712,
+     "end_time": "2024-01-26T14:41:34.737343",
      "exception": false,
-     "start_time": "2024-01-26T14:39:47.478286",
+     "start_time": "2024-01-26T14:41:32.552631",
      "status": "completed"
     },
     "tags": []
@@ -62,19 +62,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "56534014",
+   "id": "2911315f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:39:50.037337Z",
-     "iopub.status.busy": "2024-01-26T14:39:50.036664Z",
-     "iopub.status.idle": "2024-01-26T14:39:50.110274Z",
-     "shell.execute_reply": "2024-01-26T14:39:50.108037Z"
+     "iopub.execute_input": "2024-01-26T14:41:34.746647Z",
+     "iopub.status.busy": "2024-01-26T14:41:34.746056Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.793917Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.792821Z"
     },
     "papermill": {
-     "duration": 0.082061,
-     "end_time": "2024-01-26T14:39:50.113106",
+     "duration": 0.055242,
+     "end_time": "2024-01-26T14:41:34.796383",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.031045",
+     "start_time": "2024-01-26T14:41:34.741141",
      "status": "completed"
     },
     "tags": []
@@ -242,19 +242,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a277b3f",
+   "id": "2eab22e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:39:50.122913Z",
-     "iopub.status.busy": "2024-01-26T14:39:50.122451Z",
-     "iopub.status.idle": "2024-01-26T14:39:50.131765Z",
-     "shell.execute_reply": "2024-01-26T14:39:50.130906Z"
+     "iopub.execute_input": "2024-01-26T14:41:34.806421Z",
+     "iopub.status.busy": "2024-01-26T14:41:34.805996Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.814552Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.813440Z"
     },
     "papermill": {
-     "duration": 0.017009,
-     "end_time": "2024-01-26T14:39:50.134137",
+     "duration": 0.016336,
+     "end_time": "2024-01-26T14:41:34.817068",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.117128",
+     "start_time": "2024-01-26T14:41:34.800732",
      "status": "completed"
     },
     "tags": []
@@ -267,13 +267,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e9164f3",
+   "id": "aa528540",
    "metadata": {
     "papermill": {
-     "duration": 0.003926,
-     "end_time": "2024-01-26T14:39:50.142005",
+     "duration": 0.003774,
+     "end_time": "2024-01-26T14:41:34.825102",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.138079",
+     "start_time": "2024-01-26T14:41:34.821328",
      "status": "completed"
     },
     "tags": []
@@ -285,19 +285,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "02040dcb",
+   "id": "6caf155d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:39:50.152186Z",
-     "iopub.status.busy": "2024-01-26T14:39:50.151511Z",
-     "iopub.status.idle": "2024-01-26T14:39:50.179751Z",
-     "shell.execute_reply": "2024-01-26T14:39:50.178619Z"
+     "iopub.execute_input": "2024-01-26T14:41:34.834830Z",
+     "iopub.status.busy": "2024-01-26T14:41:34.834407Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.861445Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.860081Z"
     },
     "papermill": {
-     "duration": 0.036491,
-     "end_time": "2024-01-26T14:39:50.182480",
+     "duration": 0.034712,
+     "end_time": "2024-01-26T14:41:34.863803",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.145989",
+     "start_time": "2024-01-26T14:41:34.829091",
      "status": "completed"
     },
     "tags": []
@@ -331,13 +331,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37f393a1",
+   "id": "26d33f8a",
    "metadata": {
     "papermill": {
-     "duration": 0.003698,
-     "end_time": "2024-01-26T14:39:50.190279",
+     "duration": 0.003896,
+     "end_time": "2024-01-26T14:41:34.871896",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.186581",
+     "start_time": "2024-01-26T14:41:34.868000",
      "status": "completed"
     },
     "tags": []
@@ -353,19 +353,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f63a375f",
+   "id": "0b65c3ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-26T14:39:50.200572Z",
-     "iopub.status.busy": "2024-01-26T14:39:50.199392Z",
-     "iopub.status.idle": "2024-01-26T14:39:50.224102Z",
-     "shell.execute_reply": "2024-01-26T14:39:50.222321Z"
+     "iopub.execute_input": "2024-01-26T14:41:34.881789Z",
+     "iopub.status.busy": "2024-01-26T14:41:34.881376Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.903545Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.901887Z"
     },
     "papermill": {
-     "duration": 0.033073,
-     "end_time": "2024-01-26T14:39:50.227246",
+     "duration": 0.030308,
+     "end_time": "2024-01-26T14:41:34.906232",
      "exception": false,
-     "start_time": "2024-01-26T14:39:50.194173",
+     "start_time": "2024-01-26T14:41:34.875924",
      "status": "completed"
     },
     "tags": []
@@ -415,6 +415,46 @@
     "\n",
     "print(df.info())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f14c24ec",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-01-26T14:41:34.917199Z",
+     "iopub.status.busy": "2024-01-26T14:41:34.916782Z",
+     "iopub.status.idle": "2024-01-26T14:41:34.928788Z",
+     "shell.execute_reply": "2024-01-26T14:41:34.927544Z"
+    },
+    "papermill": {
+     "duration": 0.020826,
+     "end_time": "2024-01-26T14:41:34.931790",
+     "exception": false,
+     "start_time": "2024-01-26T14:41:34.910964",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age     sex     bmi  children smoker     region   charges\n",
+      "0   19  female  27.900         0    yes  southwest  16884.92\n",
+      "1   18    male  33.770         1     no  southeast   1725.55\n",
+      "2   28    male  33.000         3     no  southeast   4449.46\n",
+      "3   33    male  22.705         0     no  northwest  21984.47\n",
+      "4   32    male  28.880         0     no  northwest   3866.86\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update the charges column such that all values are rounded to nearest 2dp\n",
+    "df[['charges']] = np.round(df[[\"charges\"]],2)\n",
+    "print(df.head())"
+   ]
   }
  ],
  "metadata": {
@@ -452,14 +492,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.134568,
-   "end_time": "2024-01-26T14:39:50.957517",
+   "duration": 6.346051,
+   "end_time": "2024-01-26T14:41:35.556294",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-01-26T14:39:43.822949",
+   "start_time": "2024-01-26T14:41:29.210243",
    "version": "2.4.0"
   }
  },
